--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=Food
-spring.datasource.url=jdbc:mysql://localhost:3306/food
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://35.188.121.171:3306
+spring.datasource.username=linhdh
+spring.datasource.password=Linh1601@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
